--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -2959,14 +2959,15 @@ Filename
 
 		  <child>
 		    <widget class="GtkTreeView" id="playlists_treeview">
-		      <property name="border_width">5</property>
+		      <property name="border_width">3</property>
+		      <property name="width_request">205</property>
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="headers_visible">False</property>
-		      <property name="rules_hint">True</property>
+		      <property name="rules_hint">False</property>
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">True</property>
-		      <property name="fixed_height_mode">True</property>
+		      <property name="fixed_height_mode">False</property>
 		      <property name="hover_selection">False</property>
 		      <property name="hover_expand">False</property>
 		    </widget>
