--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -482,14 +482,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkVSeparator" id="vseparator1">
-                                        <property name="visible">True</property>
-                                      </widget>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="padding">3</property>
-                                        <property name="position">4</property>
-                                      </packing>
+                                      <placeholder/>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -518,9 +511,24 @@
                                         <property name="tooltip" translatable="yes">Update Library</property>
                                         <property name="response_id">0</property>
                                         <child>
-                                          <widget class="GtkImage" id="image18">
+                                          <widget class="GtkHBox" id="hbox6">
                                             <property name="visible">True</property>
-                                            <property name="stock">gtk-refresh</property>
+                                            <child>
+                                              <widget class="GtkImage" id="image18">
+                                                <property name="visible">True</property>
+                                                <property name="stock">gtk-refresh</property>
+                                              </widget>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="label3">
+                                                <property name="visible">True</property>
+                                                <property name="xpad">2</property>
+                                                <property name="label" translatable="yes">Update Library</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
                                           </widget>
                                         </child>
                                       </widget>
@@ -1460,39 +1468,6 @@ If you're not sure, check your mpd configuration file mpd.conf</property>
               <widget class="GtkVBox" id="vbox18">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkFrame" id="frame5">
-                    <property name="visible">True</property>
-                    <property name="border_width">5</property>
-                    <property name="label_xalign">0</property>
-                    <property name="shadow_type">GTK_SHADOW_ETCHED_OUT</property>
-                    <child>
-                      <widget class="GtkVBox" id="pref_interface_ifacebox">
-                        <property name="visible">True</property>
-                        <child>
-                          <placeholder/>
-                        </child>
-                        <child>
-                          <placeholder/>
-                        </child>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkLabel" id="label3">
-                        <property name="visible">True</property>
-                        <property name="ypad">3</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Interface&lt;/b&gt;</property>
-                        <property name="use_markup">True</property>
-                      </widget>
-                      <packing>
-                        <property name="type">label_item</property>
-                      </packing>
-                    </child>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                  </packing>
-                </child>
-                <child>
                   <widget class="GtkFrame" id="frame2">
                     <property name="visible">True</property>
                     <property name="border_width">5</property>
@@ -1521,7 +1496,6 @@ If you're not sure, check your mpd configuration file mpd.conf</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
@@ -1580,8 +1554,11 @@ If you're not sure, check your mpd configuration file mpd.conf</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">2</property>
+                    <property name="position">1</property>
                   </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </widget>
               <packing>
