--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -236,9 +236,8 @@
                         <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image10">
+                          <widget class="GtkImage" id="image_shuffle">
                             <property name="visible">True</property>
-                            <property name="icon_name">stock_shuffle</property>
                           </widget>
                         </child>
                       </widget>
@@ -256,9 +255,8 @@
                         <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image9">
+                          <widget class="GtkImage" id="image_repeat">
                             <property name="visible">True</property>
-                            <property name="icon_name">stock_repeat</property>
                           </widget>
                         </child>
                       </widget>
@@ -276,10 +274,8 @@
                         <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image24">
+                          <widget class="GtkImage" id="image_info">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-info</property>
-                            <property name="icon_size">1</property>
                           </widget>
                         </child>
                       </widget>
@@ -305,9 +301,8 @@
                                 <property name="visible">True</property>
                                 <property name="spacing">2</property>
                                 <child>
-                                  <widget class="GtkImage" id="image28">
+                                  <widget class="GtkImage" id="image_prefs">
                                     <property name="visible">True</property>
-                                    <property name="stock">gtk-preferences</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -332,9 +327,8 @@
                         <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image27">
+                          <widget class="GtkImage" id="image_volume">
                             <property name="visible">True</property>
-                            <property name="icon_name">stock_volume</property>
                           </widget>
                         </child>
                       </widget>
@@ -348,10 +342,9 @@
                       <widget class="GtkHBox" id="volume_hscalebox">
                         <property name="visible">True</property>
                         <child>
-                          <widget class="GtkImage" id="image2">
+                          <widget class="GtkImage" id="image_fmodevolume">
                             <property name="visible">True</property>
                             <property name="xpad">5</property>
-                            <property name="icon_name">stock_volume</property>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -382,12 +375,8 @@
                         <property name="relief">GTK_RELIEF_NONE</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image29">
+                          <widget class="GtkImage" id="image_fullmode">
                             <property name="visible">True</property>
-                            <property name="xalign">0</property>
-                            <property name="yalign">0</property>
-                            <property name="stock">gtk-justify-fill</property>
-                            <property name="icon_size">1</property>
                           </widget>
                         </child>
                       </widget>
@@ -1408,7 +1397,6 @@ Filename
                             <property name="height_request">50</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="headers_clickable">True</property>
                           </widget>
                         </child>
                       </widget>
