--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -238,6 +238,7 @@
                         <child>
                           <widget class="GtkImage" id="image_shuffle">
                             <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                         </child>
                       </widget>
@@ -257,6 +258,7 @@
                         <child>
                           <widget class="GtkImage" id="image_repeat">
                             <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                         </child>
                       </widget>
@@ -276,6 +278,7 @@
                         <child>
                           <widget class="GtkImage" id="image_info">
                             <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                         </child>
                       </widget>
@@ -303,6 +306,7 @@
                                 <child>
                                   <widget class="GtkImage" id="image_prefs">
                                     <property name="visible">True</property>
+                                    <property name="stock">gtk-missing-image</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -329,6 +333,7 @@
                         <child>
                           <widget class="GtkImage" id="image_volume">
                             <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                         </child>
                       </widget>
@@ -345,6 +350,7 @@
                           <widget class="GtkImage" id="image_fmodevolume">
                             <property name="visible">True</property>
                             <property name="xpad">5</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -355,7 +361,7 @@
                             <property name="width_request">100</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="adjustment">10 0 100 1 10 10</property>
+                            <property name="adjustment">10 0 100 1 10 0</property>
                             <property name="digits">0</property>
                             <property name="value_pos">GTK_POS_RIGHT</property>
                           </widget>
@@ -377,6 +383,7 @@
                         <child>
                           <widget class="GtkImage" id="image_fullmode">
                             <property name="visible">True</property>
+                            <property name="stock">gtk-missing-image</property>
                           </widget>
                         </child>
                       </widget>
@@ -1363,7 +1370,7 @@ Filename
                       <widget class="GtkSpinButton" id="crossfade_spin">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="adjustment">0 0 15 1 10 10</property>
+                        <property name="adjustment">0 0 15 1 10 0</property>
                         <property name="climb_rate">1</property>
                       </widget>
                       <packing>
@@ -1855,7 +1862,7 @@ If you're not sure, check your mpd configuration file mpd.conf</property>
                       <widget class="GtkSpinButton" id="tag_track">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="adjustment">0 0 100 1 10 10</property>
+                        <property name="adjustment">0 0 100 1 10 0</property>
                         <property name="climb_rate">1</property>
                       </widget>
                       <packing>
@@ -1883,7 +1890,7 @@ If you're not sure, check your mpd configuration file mpd.conf</property>
                       <widget class="GtkSpinButton" id="tag_year">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="adjustment">0 0 2099 1 10 10</property>
+                        <property name="adjustment">0 0 2099 1 10 0</property>
                         <property name="climb_rate">1</property>
                       </widget>
                       <packing>
